--- a/Calculate_islets_EIN_20190927_gsis-day7.ipynb
+++ b/Calculate_islets_EIN_20190927_gsis-day7.ipynb
@@ -24,7 +24,7 @@
     "Notes:\n",
     "    \n",
     "    1. Read all csv files and combine to a single csv file\n",
-    "    2. Create a new column based using lamda function\n",
+    "    2. Create a new column based using lambda function\n",
     "    3. Use pd.cut() to numeric data to categorical/bin, convert ctegorial data to fload\n",
     "    4. pd.pivot_table\n",
     "    5. Export data frame to a csv file.   \n",
